// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`All Optional 1`] = `
<div
  data-show-optional="false"
  data-show-required="true"
  data-show-summary="true"
  style="display: flex; flex-direction: column; row-gap: var(--ds-size-4);"
>
  <ds-field>
    <label
      data-weight="medium"
      for="<removed>"
    >
      <span>
        Hva synes du om skjemaet?
      </span>
    </label>
    <div>
      <textarea
        id="<removed>"
        style="--_ds-field-sizing: <removed>;"
      >
      </textarea>
    </div>
  </ds-field>
  <ds-field>
    <label
      data-weight="medium"
      for="<removed>"
    >
      <span>
        Har du noen andre innspill?
      </span>
    </label>
    <div>
      <textarea
        id="<removed>"
        style="--_ds-field-sizing: <removed>;"
      >
      </textarea>
    </div>
  </ds-field>
</div>
`;

exports[`All Required 1`] = `
<div
  data-show-optional="false"
  data-show-required="true"
  data-show-summary="true"
  style="display: flex; flex-direction: column; row-gap: var(--ds-size-4);"
>
  <ds-field>
    <label
      data-weight="medium"
      for="<removed>"
    >
      <span>
        Fornavn
      </span>
    </label>
    <div>
      <input
        id="<removed>"
        required
        type="text"
      >
    </div>
  </ds-field>
  <ds-field>
    <label
      data-weight="medium"
      for="<removed>"
    >
      <span>
        Etternavn
      </span>
    </label>
    <div>
      <input
        id="<removed>"
        required
        type="text"
      >
    </div>
  </ds-field>
</div>
`;

exports[`Fieldset Checkboxes 1`] = `
<div
  data-show-optional="false"
  data-show-required="true"
  data-show-summary="false"
>
  <fieldset aria-labelledby="<removed>">
    <legend
      data-weight="medium"
      id="<removed>"
    >
      <span>
        Hvordan vil du helst at vi skal kontakte deg?
      </span>
    </legend>
    <p
      data-variant="default"
      id="<removed>"
    >
      Velg de alternativene som er relevante for deg.
    </p>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        id="<removed>"
        name="checkbox-group"
        required
        type="checkbox"
        value="epost"
      >
      <label
        data-weight="regular"
        for="<removed>"
      >
        <span>
          E-post
        </span>
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        id="<removed>"
        name="checkbox-group"
        required
        type="checkbox"
        value="telefon"
      >
      <label
        data-weight="regular"
        for="<removed>"
      >
        <span>
          Telefon
        </span>
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        id="<removed>"
        name="checkbox-group"
        required
        type="checkbox"
        value="sms"
      >
      <label
        data-weight="regular"
        for="<removed>"
      >
        <span>
          SMS
        </span>
      </label>
    </ds-field>
    <p
      data-field="validation"
      hidden
      id="<removed>"
    >
    </p>
  </fieldset>
</div>
`;

exports[`Fieldset Radios 1`] = `
<div
  data-show-optional="false"
  data-show-required="true"
  data-show-summary="false"
>
  <fieldset aria-labelledby="<removed>">
    <legend
      data-weight="medium"
      id="<removed>"
    >
      <span>
        Velg din aldersgruppe
      </span>
    </legend>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        id="<removed>"
        name="radio-group"
        required
        type="radio"
        value="10-20"
      >
      <label
        data-weight="regular"
        for="<removed>"
      >
        10-20 år
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        id="<removed>"
        name="radio-group"
        required
        type="radio"
        value="21-45"
      >
      <label
        data-weight="regular"
        for="<removed>"
      >
        21-45 år
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        id="<removed>"
        name="radio-group"
        required
        type="radio"
        value="46-80"
      >
      <label
        data-weight="regular"
        for="<removed>"
      >
        46-80 år
      </label>
    </ds-field>
    <p
      data-field="validation"
      hidden
      id="<removed>"
    >
    </p>
  </fieldset>
</div>
`;

exports[`Individual Checkboxes 1`] = `
<div
  data-show-optional="false"
  data-show-required="true"
  data-show-summary="true"
>
  <ds-field data-clickdelegatefor="<removed>">
    <input
      id="<removed>"
      required
      type="checkbox"
    >
    <label
      data-weight="regular"
      for="<removed>"
    >
      <span>
        Jeg bekrefter at opplysningene i søknaden er korrekt
      </span>
    </label>
  </ds-field>
  <ds-field data-clickdelegatefor="<removed>">
    <input
      id="<removed>"
      type="checkbox"
    >
    <label
      data-weight="regular"
      for="<removed>"
    >
      <span>
        Jeg er villig til å delta i en spørreundersøkelse i etterkant av søknadsprosessen
      </span>
    </label>
  </ds-field>
</div>
`;

exports[`Manual Summary Placement 1`] = `
<div
  data-show-optional="false"
  data-show-required="true"
  data-show-summary="true"
  style="display: flex; flex-direction: column; row-gap: var(--ds-size-4);"
>
  <h2 data-size="md">
    Kontaktinformasjon
  </h2>
  <p data-variant="default">
    Vi trenger å vite hvordan vi kan kontakte deg i etterkant av søknaden.
  </p>
  <div>
  </div>
  <ds-field>
    <label
      data-weight="medium"
      for="<removed>"
    >
      <span>
        Fornavn
      </span>
    </label>
    <div>
      <input
        id="<removed>"
        required
        type="text"
      >
    </div>
  </ds-field>
  <ds-field>
    <label
      data-weight="medium"
      for="<removed>"
    >
      <span>
        Etternavn
      </span>
    </label>
    <div>
      <input
        id="<removed>"
        required
        type="text"
      >
    </div>
  </ds-field>
  <ds-field>
    <label
      data-weight="medium"
      for="<removed>"
    >
      <span>
        E-postadresse
      </span>
    </label>
    <div>
      <input
        id="<removed>"
        required
        type="text"
      >
    </div>
  </ds-field>
</div>
`;

exports[`Outline 1`] = `
<div data-variant="tinted">
  <div
    data-show-optional="false"
    data-show-required="true"
    data-show-summary="true"
    data-variant="outline"
    style="display: flex; flex-direction: column; row-gap: var(--ds-size-4);"
  >
    <ds-field>
      <label
        data-weight="medium"
        for="<removed>"
      >
        <span>
          Fornavn
        </span>
      </label>
      <div>
        <input
          id="<removed>"
          required
          type="text"
        >
      </div>
    </ds-field>
    <ds-field>
      <label
        data-weight="medium"
        for="<removed>"
      >
        <span>
          Mellomnavn
        </span>
      </label>
      <div>
        <input
          id="<removed>"
          type="text"
        >
      </div>
    </ds-field>
    <ds-field>
      <label
        data-weight="medium"
        for="<removed>"
      >
        <span>
          Etternavn
        </span>
      </label>
      <div>
        <input
          id="<removed>"
          required
          type="text"
        >
      </div>
    </ds-field>
  </div>
</div>
`;

exports[`Preview 1`] = `
<div
  data-show-optional="false"
  data-show-required="true"
  data-show-summary="true"
  style="display: flex; flex-direction: column; row-gap: var(--ds-size-4);"
>
  <ds-field>
    <label
      data-weight="medium"
      for="<removed>"
    >
      <span>
        Fornavn
      </span>
    </label>
    <div>
      <input
        id="<removed>"
        required
        type="text"
      >
    </div>
  </ds-field>
  <ds-field>
    <label
      data-weight="medium"
      for="<removed>"
    >
      <span>
        Mellomnavn
      </span>
    </label>
    <div>
      <input
        id="<removed>"
        type="text"
      >
    </div>
  </ds-field>
  <ds-field>
    <label
      data-weight="medium"
      for="<removed>"
    >
      <span>
        Etternavn
      </span>
    </label>
    <div>
      <input
        id="<removed>"
        required
        type="text"
      >
    </div>
  </ds-field>
</div>
`;

exports[`Readonly 1`] = `
<div
  data-show-optional="false"
  data-show-required="true"
  data-show-summary="true"
  style="display: flex; flex-direction: column; row-gap: var(--ds-size-4);"
>
  <ds-field>
    <label
      data-weight="medium"
      for="<removed>"
    >
      <span>
        Fornavn
      </span>
    </label>
    <div>
      <input
        id="<removed>"
        readonly
        required
        type="text"
      >
    </div>
  </ds-field>
  <ds-field>
    <label
      data-weight="medium"
      for="<removed>"
    >
      <span>
        Mellomnavn
      </span>
    </label>
    <div>
      <input
        id="<removed>"
        readonly
        type="text"
      >
    </div>
  </ds-field>
  <ds-field>
    <label
      data-weight="medium"
      for="<removed>"
    >
      <span>
        Etternavn
      </span>
    </label>
    <div>
      <input
        id="<removed>"
        readonly
        required
        type="text"
      >
    </div>
  </ds-field>
</div>
`;

exports[`Single Optional Field 1`] = `
<div
  data-show-optional="true"
  data-show-required="true"
  data-show-summary="false"
>
  <ds-field>
    <label
      data-weight="medium"
      for="<removed>"
    >
      <span>
        Har du noen kommentarer?
      </span>
    </label>
    <div>
      <textarea
        id="<removed>"
        style="--_ds-field-sizing: <removed>;"
      >
      </textarea>
    </div>
  </ds-field>
</div>
`;

exports[`Single Required Field 1`] = `
<div
  data-show-optional="false"
  data-show-required="true"
  data-show-summary="false"
>
  <ds-field>
    <label
      data-weight="medium"
      for="<removed>"
    >
      <span>
        Beskriv hendelsesforløpet
      </span>
    </label>
    <div>
      <textarea
        id="<removed>"
        required
        style="--_ds-field-sizing: <removed>;"
      >
      </textarea>
    </div>
  </ds-field>
</div>
`;
